[package]
name = "rs-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["full"] }
rand = "0.8.5"
tonic = "0.8.3"
prost = "0.11"
anyhow = "1.0.67"
futures = "0.3.25"
ntest = "0.9.0"
thiserror = "1.0.38"

[build-dependencies]
tonic-build = "0.8.3"